# Vjer

./: .dockerignore  .gitignore  .gitlab-ci.yml  .p4ignore  CHANGELOG.md  DOCUMENTATION.md  Dockerfile.base  Dockerfile.dotnet  Dockerfile.linux  Dockerfile.scan  Dockerfile.sencha  Dockerfile.windows  MANIFEST.in  README.md  project-cfg-dotnet.yml  project-cfg-linux.yml  project-cfg-scan.yml  project-cfg-sencha.yml  project-cfg-win.yml  project-cfg.yml  pyproject.toml  requirements-frozen-linux.txt  requirements-frozen-windows.txt  requirements.txt  vjer.yml
.github/workflows/: build-and-release.yml  build.yml  publish.yml  release.yml  variable-test.yml
ansible/plugins/modules/: coco_gcp_container_cluster.py  coco_gcp_container_node_pool.py
ansible/roles/coco/defaults/: main.yml
ansible/roles/coco/filter_plugins/: filters.py
ansible/roles/coco/tasks/: deploy_product.yml
ansible/roles/gcp/vars/: main.yml
ansible/roles/jfrog/defaults/: main.yml
ansible/roles/jfrog/tasks/: download_artifacts.yml
ansible/roles/load_balancer/tasks/: disable_nodes.yml  enable_nodes.yml  manage_nodes.yml
cicd-scripts/: Invoke-JobAction.ps1  build.py  deploy.py  freeze.py  pre-release.py  release.py  rollback.py  test.py  tool_report.py  utils.py  veracode_post_scan_check.sh  veracode_pre_scan_check.sh
cicd-support/: Set-ProjectVars.ps1  cicd.sh  set_project_vars.sh
docs/: Image Dependencies.txt  coding_standards.py  conf.py  modules.rst
gojira/: __init__.py  build.py  deploy.py  freeze.py  gojira.py  pre_release.py  release.py  rollback.py  test.py  utils.py
tests/: Test-Item.ps1  test_item.sh  vjer.yml
util/: new-env.sh  test_images.py
vjer/: __init__.py  __main__.py  build.py  deploy.py  pre_release.py  release.py  rollback.py  test.py  tool_reporter.py  utils.py  vjer.py
