[project]
name = "cicd-support"
authors = [{name = "Jeffery G. Smith", email = "Jeff.Smith@constructconnect.com"}]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ["version", "description"]

requires-python = "~=3.10"
keywords = ["GitLab", "pipeline", "utilities"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: Proprietary",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",

    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Natural Language :: English",
]

dependencies = [
    "ansible; sys_platform != 'win32'",
    "BatCave",
    "pyodbc; sys_platform == 'win32'",
    "pyyaml",
    "dicttoxml",
    "dotmap",
    "twine"
]

[project.optional-dependencies]
dev = ["flit", "twine", "bumpver"]
test = [
    "ansible-lint; sys_platform != 'win32'",
    "autopep8",
    "doc8",
    "flake8",
    "flake8-annotations",
    "flake8-pyproject",
    "junitparser",
    "mypy",
    "pylint",
    "restview",
    "rope",
    "types-PyYAML",
    "types-requests",
    "types-setuptools",
    "types-xmltodict",
    "unittest-xml-reporting"
]
deploy = ["pywinrm"]

[project_urls]
repository = "https://gitlab.buildone.co/cc/sre/bart-images"
changelog = "https://gitlab.buildone.co/cc/sre/bart-images/-/blob/main/CHANGELOG.md"

[tool.flake8]
max-line-length = 200
ignore = ["ANN002", "ANN003", "ANN101", "ANN204", "ANN401"]

[tool.pylint.format]
max-line-length = 200

[tool.pylint.messages_control]
disable = ["duplicate-code" , "fixme"]

[[tool.mypy.overrides]]
module = "dicttoxml.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dotmap.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "junitparser.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kubernetes.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "P4.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pyodbc.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pywintypes.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "win32typing.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wmi.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "xmlrunner.*"
ignore_missing_imports = true
