[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "vjer"
authors = [{ name = "Jeffery G. Smith", email = "web@pobox.com" }]
readme = "DOCUMENTATION.md"
license = { file = "LICENSE" }
dynamic = ["version", "description"]

requires-python = "~=3.11"
keywords = ["python", "programming", "utilities"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",

    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Natural Language :: English",
]

dependencies = ["BatCave~=43.0"]

[project.optional-dependencies]
dev = ["flit", "twine", "bumpver"]
test = [
    "flake8",
    "flake8-annotations",
    "flake8-pyproject",
    "mypy",
    "pylint",
    "types-PyYAML",
    "types-requests"
]
# doc = []

[project.scripts]
vjer = "vjer.vjer:main"

[project.urls]
homepage = "https://github.com/tardis4500/vjer/"
documentation = "https://vjer.readthedocs.io"
repository = "https://github.com/tardis4500/vjer/"
changelog = "https://github.com/tardis4500/vjer/blob/main/CHANGELOG.md"

[tool.flake8]
max-line-length = 200
ignore = ["ANN002", "ANN003", "ANN101", "ANN204", "ANN401"]

[tool.pylint.format]
max-line-length = 200

[tool.pylint.design]
max-attributes = 10
max-args = 10

[tool.pylint.messages_control]
disable = ["duplicate-code", "fixme"]

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dotmap.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kubernetes.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "P4.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pywintypes.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "win32typing.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wmi.*"
ignore_missing_imports = true

[tool.bumpver]
current_version = "v30.0.0rc38"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version} [skip-ci]"
commit = true
tag = false
push = true

[tool.bumpver.file_patterns]
"vjer/__init__.py" = ["__version__ = '{pep440_version}'"]
