[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "vjer"
authors = [{ name = "Jeffery G. Smith", email = "web@pobox.com" }]
readme = "DOCUMENTATION.md"
license = { file = "LICENSE" }
dynamic = ["version", "description"]

requires-python = "~=3.11"
keywords = ["python", "programming", "utilities"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",

    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Natural Language :: English",
]

dependencies = [
    "BatCave",
    "bumpver",
    "junitparser",
    "flake8",
    "flake8-annotations",
    "flake8-pyproject",
    "flit",
    "mypy",
    "pylint",
    "unittest-xml-reporting",
]

[project.optional-dependencies]
# dev = []
test = ["types-PyYAML", "types-requests"]
# doc = []

[project.scripts]
vjer = "vjer.vjer:main"

[project.urls]
homepage = "https://github.com/tardis4500/vjer/"
documentation = "https://vjer.readthedocs.io"
repository = "https://github.com/tardis4500/vjer/"
changelog = "https://github.com/tardis4500/vjer/blob/main/CHANGELOG.md"

[tool.flake8]
max-line-length = 200
ignore = ["ANN002", "ANN003", "ANN101", "ANN204", "ANN401"]

[tool.pylint.format]
max-line-length = 200

[tool.pylint.design]
max-attributes = 10
max-args = 10

[tool.pylint.messages_control]
disable = ["duplicate-code", "fixme"]

[[tool.mypy.overrides]]
module = "bumpver.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dotmap.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "flit.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "xmlrunner.*"
ignore_missing_imports = true

[tool.bumpver]
current_version = "v36.1.1rc2"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version} [skip ci]"
commit = true
tag = false
push = true

[tool.bumpver.file_patterns]
"vjer/__init__.py" = ["__version__ = '{pep440_version}'"]
